<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homepage_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingStart="@dimen/screen_content_horizontal_padding"
    android:paddingEnd="@dimen/screen_content_horizontal_padding">

    <com.matijakljajic.freeairradio.ui.util.ContentWidthFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <include layout="@layout/view_station_feed_content" />

    </com.matijakljajic.freeairradio.ui.util.ContentWidthFrameLayout>

</FrameLayout>
